--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.9.3"
 composeBom = "2025.01.01"
 dependency-guard = "0.5.0"
 proton-environmentConfig = "1.3.1"
+proton-detekt = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,4 +34,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 dependency-guard = { id = "com.dropbox.dependency-guard", version.ref = "dependency-guard" }
 proton-environmentConfig = { id = "me.proton.core.gradle-plugins.environment-config", version.ref = "proton-environmentConfig" }
-
+proton-detekt = { id = "me.proton.core.gradle-plugins.detekt", version.ref = "proton-detekt" }
