--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,12 @@
 [versions]
+# Plugins
 agp = "8.7.3"
 kotlin = "2.0.21"
+ksp = "2.0.21-1.0.27"
+dependency-guard = "0.5.0"
+proton-environmentConfig = "1.3.1"
+proton-detekt = "1.3.1"
+
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -8,9 +14,18 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2025.01.01"
-dependency-guard = "0.5.0"
-proton-environmentConfig = "1.3.1"
-proton-detekt = "1.3.1"
+room = "2.6.1"
+hilt = "2.55"
+androidxHiltNavigationCompose = "1.2.0"
+
+# Kotlin
+datetime = "0.4.0"
+
+# Core
+core = "30.3.1"
+
+# Authenticator
+authenticatorCommon = "0.13.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,6 +42,26 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
+
+# Room
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+
+# Kotlinx
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime" }
+
+# Core
+core-crypto = { module = "me.proton.core:crypto", version.ref = "core" }
+core-data = { module = "me.proton.core:data", version.ref = "core" }
+core-dataRoom = { module = "me.proton.core:data-room", version.ref = "core" }
+
+# Authenticator
+authenticator-common = { module = "me.proton.authenticator.common:lib", version.ref = "authenticatorCommon" }
+
+## Hilt
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -35,3 +70,5 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 dependency-guard = { id = "com.dropbox.dependency-guard", version.ref = "dependency-guard" }
 proton-environmentConfig = { id = "me.proton.core.gradle-plugins.environment-config", version.ref = "proton-environmentConfig" }
 proton-detekt = { id = "me.proton.core.gradle-plugins.detekt", version.ref = "proton-detekt" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
