--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ kotlinVersion = "2.0.21"
 kotlinxSerializationVersion = "1.8.0"
 kspVersion = "2.0.21-1.0.27"
 lifecycleRuntimeVersion = "2.8.7"
+moleculeVersion = "2.0.0"
 protonDetektVersion = "1.3.1"
 protonEnvironmentConfigVersion = "1.3.1"
 roomVersion = "2.6.1"
@@ -61,6 +62,7 @@ jna = { module = "net.java.dev.jna:jna", version.ref = "jnaVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetimeVersion" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationVersion" }
+molecule = { module = "app.cash.molecule:molecule-runtime", version.ref = "moleculeVersion" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timberVersion" }
 
 [bundles]
@@ -71,11 +73,20 @@ android-application-implementation = [
 android-application-ksp = [
     "hilt-compiler",
 ]
+business-library-implementation = [
+    "authenticator-common",
+    "core-crypto",
+    "hilt-android",
+]
+business-library-ksp = [
+    "hilt-compiler",
+]
 feature-library-implementation = [
     "androidx-hilt-navigation-compose",
     "androidx-lifecycle-runtime-compose",
     "androidx-lifecycle-runtime-ktx",
     "hilt-android",
+    "molecule",
 ]
 feature-library-ksp = [
     "hilt-compiler",
