--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ protobufPluginVersion = "0.9.4"
 protobufVersion = "4.30.2"
 protonDetektVersion = "1.3.1"
 protonEnvironmentConfigVersion = "1.3.1"
+reorderableVersion = "2.4.3"
 roomVersion = "2.7.1"
 sentryVersion = "3.5.0"
 startupVersion = "1.2.0"
@@ -78,6 +79,7 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 molecule = { module = "app.cash.molecule:molecule-runtime", version.ref = "moleculeVersion" }
 protobuf-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
 protobuf-protoc = { module = "com.google.protobuf:protoc", version.ref = "protobufVersion" }
+reorderable = { module = "sh.calvin.reorderable:reorderable", version.ref = "reorderableVersion" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timberVersion" }
 zxing-core = { module = "com.google.zxing:core", version.ref = "zxingVersion" }
 
