--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,14 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
             <meta-data
+                android:name="proton.android.authenticator.app.initializers.SyncPeriodicWorkInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+            <meta-data
+                android:name="proton.android.authenticator.app.initializers.SyncWorkInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+            <meta-data
                 android:name="me.proton.core.userrecovery.presentation.compose.DeviceRecoveryInitializer"
                 android:value="androidx.startup"
                 tools:node="remove" />
