--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ protobufVersion = "4.31.1"
 protonDetektVersion = "1.3.1"
 protonEnvironmentConfigVersion = "1.3.1"
 reorderableVersion = "2.4.3"
+retrofitVersion = "2.9.0"
 roomVersion = "2.6.1"
 sentryVersion = "3.5.0"
 startupVersion = "1.2.0"
@@ -129,6 +130,7 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 protobuf-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
 protobuf-protoc = { module = "com.google.protobuf:protoc", version.ref = "protobufVersion" }
 reorderable = { module = "sh.calvin.reorderable:reorderable", version.ref = "reorderableVersion" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timberVersion" }
 zxing-core = { module = "com.google.zxing:core", version.ref = "zxingVersion" }
 
@@ -161,6 +163,7 @@ business-library-implementation = [
     "core-crypto",
     "hilt-android",
     "protobuf-lite",
+    "retrofit",
 ]
 business-library-ksp = [
     "hilt-compiler",
